apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__requests_exceeding_max_are_not_rejected_in_measure_mode@basic_fragments.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": 2.0,
  "apollo::demand_control::actual_cost_by_subgraph": {
    "products": 2.0
  },
  "apollo::demand_control::estimated_cost": 102.0,
  "apollo::demand_control::estimated_cost_by_subgraph": {
    "products": 102.0
  },
  "apollo::demand_control::result": "COST_ESTIMATED_TOO_EXPENSIVE",
  "apollo::demand_control::result_by_subgraph": {
    "products": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE"
  },
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": {
    "products": 1
  },
  "body": {
    "data": {
      "interfaceInstance1": {
        "field1": null,
        "field2": "hello"
      },
      "someUnion": {
        "innerList": []
      }
    }
  }
}
