apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__requests_exceeding_max_are_not_rejected_in_measure_mode@federated_ships_fragment.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": 15.0,
  "apollo::demand_control::actual_cost_by_subgraph": {
    "users": 5.0,
    "vehicles": 10.0
  },
  "apollo::demand_control::estimated_cost": 400.0,
  "apollo::demand_control::estimated_cost_by_subgraph": {
    "users": 200.0,
    "vehicles": 200.0
  },
  "apollo::demand_control::result": "COST_ESTIMATED_TOO_EXPENSIVE",
  "apollo::demand_control::result_by_subgraph": {
    "users": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE",
    "vehicles": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE"
  },
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": {
    "users": 2,
    "vehicles": 1
  },
  "body": {
    "data": {
      "ships": [
        {
          "owner": {
            "licenseNumber": "100",
            "name": "User100"
          }
        },
        {
          "owner": {
            "licenseNumber": "110",
            "name": "User110"
          }
        },
        {
          "owner": {
            "licenseNumber": "120",
            "name": "User120"
          }
        },
        {
          "owner": {
            "licenseNumber": "120",
            "name": "User120"
          }
        },
        {
          "owner": {
            "licenseNumber": "120",
            "name": "User120"
          }
        }
      ],
      "users": [
        {
          "licenseNumber": "10",
          "name": "User10"
        },
        {
          "licenseNumber": "11",
          "name": "User11"
        }
      ]
    }
  }
}
