apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__requests_exceeding_max_are_rejected@basic_fragments.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": null,
  "apollo::demand_control::actual_cost_by_subgraph": null,
  "apollo::demand_control::estimated_cost": 102.0,
  "apollo::demand_control::estimated_cost_by_subgraph": {
    "products": 102.0
  },
  "apollo::demand_control::result": "COST_ESTIMATED_TOO_EXPENSIVE",
  "apollo::demand_control::result_by_subgraph": null,
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": null,
  "body": {
    "errors": [
      {
        "extensions": {
          "code": "COST_ESTIMATED_TOO_EXPENSIVE",
          "cost.estimated": 102.0,
          "cost.estimated.breakdown": {
            "__cost": 0.0,
            "interfaceInstance1": {
              "__cost": 1.0
            },
            "someUnion": {
              "__cost": 1.0,
              "innerList": {
                "__cost": 100.0
              }
            }
          },
          "cost.max": 1.0
        },
        "message": "query estimated cost 102 exceeded configured maximum 1"
      }
    ]
  }
}
